Fix CSS add overflow:hidden to parent #main_content to contain the floats

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -427,7 +427,7 @@ Full-Width Styles
 }
 
 #main_content {
-	min-height:525px;
+	overflow: hidden;
 	padding-top: 40px;
 }
 
